fix(server): apply CIO shutdown grace
Signed-off-by: luinstra <luinstra@gmail.com>